project(utils)

set(
		CONTAINER_INCLUDE_DIR
		${CMAKE_CURRENT_SOURCE_DIR}/include
)

set(
		SOURCE
		${CONTAINER_INCLUDE_DIR}/${TOOLBOX_PREFIX}/assert.hpp
		${CONTAINER_INCLUDE_DIR}/${TOOLBOX_PREFIX}/random.hpp
)

add_library(
		${PROJECT_NAME} INTERFACE
)

target_include_directories(
		${PROJECT_NAME} INTERFACE
		${SOURCE}
		$<BUILD_INTERFACE:${CONTAINER_INCLUDE_DIR}>
		$<INSTALL_INTERFACE:$<INSTALL_PREFIX>/${PROJECT_NAME}-${PROJECT_VERSION}>
)

target_compile_features(
		${PROJECT_NAME} INTERFACE
		cxx_std_20
)
